--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,12 @@ name: CI Pipeline
 on:
   push:
     branches:
-      - ci-test
-#on: [push, pull_request]
+      - main
+      - dev
+  pull_request:
+    branches:
+      - main
+      - dev
 
 jobs:
   test-noetic:
