--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ dependencies = [
     "langchain-community==0.2.12",
     "langchain-core==0.2.34",
     "langchain-openai==0.1.22",
-    "langchain-ollama",
+    "langchain-ollama==0.1.3",
     "pydantic",
     "pyinputplus",
     "azure-identity",
