Enhance X11 forwarding support in demo script and add Dockerfile for testing multiple ROS versions
- Improved X11 forwarding setup for Linux and macOS, including checks for XQuartz.
- Added detailed error handling and alternative display testing for X11 connections.
- Introduced a new Dockerfile for testing ROSA with various ROS distributions (Noetic, Humble, Iron, Jazzy).
- Updated pyproject.toml to specify the license as "Apache-2.0".

These changes improve usability and testing capabilities for the ROSA project.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,11 @@ version = "1.0.8"
 description = "ROSA: the Robot Operating System Agent"
 readme = "README.md"
 authors = [{ name = "Rob Royce", email = "Rob.Royce@jpl.nasa.gov" }]
-license = { file = "LICENSE" }
+license = "Apache-2.0"
 classifiers = [
     "Development Status :: 4 - Beta",
     "Environment :: Console",
     "Intended Audience :: Science/Research",
-    "License :: OSI Approved :: Apache Software License",
     "Natural Language :: English",
     "Operating System :: Unix",
     "Programming Language :: Python :: 3",
