--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,9 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libc6 libc6-dev
           sudo apt-get install -y python3.9
-          sudo apt-get install -y python3-pip
+          sudo apt-get install -y python3-pip curl build-essential
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+          export PATH="/root/.cargo/bin:${PATH}"
           python3.9 -m pip install --user -e .
         shell: bash
 
@@ -57,11 +59,14 @@ jobs:
       - name: Install dependencies
         run: |
           DEBIAN_FRONTEND=noninteractive sudo apt-get update
-          DEBIAN_FRONTEND=noninteractive sudo apt-get install -y python3.10 python3-pip
+          DEBIAN_FRONTEND=noninteractive sudo apt-get install -y python3.10 python3-pip curl build-essential
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+          export PATH="/root/.cargo/bin:${PATH}"
         shell: bash
 
       - name: Install Package
         run: |
+          export PATH="/root/.cargo/bin:${PATH}"
           python3.10 -m pip install --user -e .
         shell: bash
 
