--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
           sudo apt-get install -y python3.9
           sudo apt-get install -y python3-pip curl build-essential
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
-          export PATH="/root/.cargo/bin:${PATH}"
+          source "$HOME/.cargo/env"
           python3.9 -m pip install --user -e .
         shell: bash
 
@@ -61,12 +61,7 @@ jobs:
           DEBIAN_FRONTEND=noninteractive sudo apt-get update
           DEBIAN_FRONTEND=noninteractive sudo apt-get install -y python3.10 python3-pip curl build-essential
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
-          export PATH="/root/.cargo/bin:${PATH}"
-        shell: bash
-
-      - name: Install Package
-        run: |
-          export PATH="/root/.cargo/bin:${PATH}"
+          source "$HOME/.cargo/env"
           python3.10 -m pip install --user -e .
         shell: bash
 
