refactor: consolidate dependency installation steps in CI pipeline for Python

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,12 +27,11 @@ jobs:
       - name: Install dependencies
         run: |
           apt-get update
-          apt-get install -y libc6 libc6-dev
-          apt-get install -y python3.9 python3.9-distutils curl build-essential
-          curl -sS https://bootstrap.pypa.io/get-pip.py | python3.9
+          apt-get install -y libc6 libc6-dev python3.9 python3-pip curl build-essential
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
-          source "$HOME/.cargo/env"
-          python3.9 -m pip install -e .
+          export PATH="/root/.cargo/bin:${PATH}"
+          python3.9 -m pip install --upgrade pip
+          python3.9 -m pip install --break-system-packages --ignore-installed -e .
         shell: bash
 
       - name: Run tests
@@ -59,11 +58,11 @@ jobs:
       - name: Install dependencies
         run: |
           DEBIAN_FRONTEND=noninteractive apt-get update
-          DEBIAN_FRONTEND=noninteractive apt-get install -y python3.10 python3.10-distutils curl build-essential
-          curl -sS https://bootstrap.pypa.io/get-pip.py | python3.10
+          DEBIAN_FRONTEND=noninteractive apt-get install -y python3.10 python3-pip curl build-essential
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
-          source "$HOME/.cargo/env"
-          python3.10 -m pip install -e .
+          export PATH="/root/.cargo/bin:${PATH}"
+          python3.10 -m pip install --upgrade pip
+          python3.10 -m pip install --break-system-packages --ignore-installed -e .
         shell: bash
 
       - name: Run tests
